--- a/src/pages/clinic-manager/clinic-manager.html
+++ b/src/pages/clinic-manager/clinic-manager.html
@@ -47,7 +47,7 @@
     </div>
     <div class="speil" *ngIf="clinics?.length === 0" text-center>
         <ion-label >
-            Create Clinic By pressing the add button on the lower left of the screen.
+            Create Clinic by pressing the add button on the lower left of the screen.
         </ion-label>
     </div>
     <ion-fab bottom right>
