changed profile title

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -1,7 +1,7 @@
 <ion-header>
 	<ion-navbar color="primary">
 		<ion-title>
-			Edit Profile
+			Edit Account
 		</ion-title>
 	</ion-navbar>
 </ion-header>
