--- a/src/pages/clinic-manager/clinic/clinic.html
+++ b/src/pages/clinic-manager/clinic/clinic.html
@@ -112,7 +112,7 @@
                 </ion-col>
             </ion-row>
         </ion-grid>
-        <div center>
+        <div text-center>
             <xhr-button #xhr round large color="accent" type="submit" [disabled]="mode !== 'Edit' && (clinicForm.pristine || form.pristine)"
                 (xhrClick)="submitForm($event)">
                 Submit
