--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,6 +1,6 @@
 <ion-content>
 	<div class='flex-box'>
-	<div center class="header">
+	<div text-center class="header">
 		<img class="logo" src="assets/img/logo.png"/>
 	</div>
 	<form #form="ngForm" (submit)="xhr.submit($event)" class="content">
@@ -19,7 +19,7 @@
 		</ion-list>
 		</div>
 		<div class="form-gap"></div>
-		<div center>
+		<div text-center>
 			<xhr-button #xhr wd-md round large color="accent"
 			[disabled]="form.invalid" (xhrClick)="login($event)"> Login </xhr-button>
 		</div>
