applied role based access on queue; minor changes on tabs

--- a/src/pages/schedule/schedule.html
+++ b/src/pages/schedule/schedule.html
@@ -26,13 +26,13 @@
 		<ion-grid>
 			<ion-row>
 				<ion-col >
-					<xhr-button icon-only clear full [disabled]="!serving" (xhrClick)="done($event)">
+					<xhr-button icon-only clear full [disabled]="!serving || account.role != 1" (xhrClick)="done($event)">
 						<ion-icon name="thumbs-up" color="accent"></ion-icon>
 						Done
 					</xhr-button>
 				</ion-col>
 				<ion-col>
-					<xhr-button icon-only clear full [disabled]="!hasForQueue()" (xhrClick)="next($event)">
+					<xhr-button icon-only clear full [disabled]="!hasForQueue() || account.role != 1" (xhrClick)="next($event)">
 						<ion-icon name="swap" color="accent"></ion-icon>
 						Next
 					</xhr-button>
@@ -44,19 +44,19 @@
 					</button>
 				</ion-col>
 				<ion-col col-0 >
-					<xhr-button #queueAgainBtn icon-only  clear full [disabled]="!serving" (xhrClick)="queueAgain($event)">
+					<xhr-button #queueAgainBtn icon-only  clear full [disabled]="!serving || account.role != 1" (xhrClick)="queueAgain($event)">
 						<ion-icon name="return-left" color="accent"></ion-icon>
 						Queue Again
 					</xhr-button>
 				</ion-col>
 				<ion-col col-0>
-					<xhr-button #removeBtn icon-only clear full [disabled]="!serving"(xhrClick)="noShow($event)">
+					<xhr-button #removeBtn icon-only clear full [disabled]="!serving || account.role != 1"(xhrClick)="noShow($event)">
 						<ion-icon name="eye-off" color="accent"></ion-icon>
 						No-Show
 					</xhr-button>
 				</ion-col>
 				<ion-col col-0>
-					<button ion-button icon-only  clear full (click)="toggleReOrder()" [disabled]="!(queue?.length > 1)">
+					<button ion-button icon-only  clear full (click)="toggleReOrder()" [disabled]="account.role != 1">
 						<ion-icon name="shuffle" color="accent" ></ion-icon>
 						Re-Order
 					</button>
@@ -82,8 +82,8 @@
 				</ion-item>
 			<ion-item-options side="left">
 				<xhr-button color="danger" (xhrClick)="delete($event, customer)">
-					<ion-icon name="trash"></ion-icon>
-					Delete
+					<ion-icon name="eye-off"></ion-icon>
+					No Show
 				</xhr-button>
 				<button ion-button color="secondary" (click)="addOrEditQueue( customer)">
 					<ion-icon name="md-create"></ion-icon>
@@ -95,7 +95,8 @@
 					<ion-icon [name]="button.icon"></ion-icon>
 					{{button.name}}
 				</xhr-button>
-				<xhr-button color="secondary" (xhrClick)="serveNow($event, customer)">
+				<xhr-button color="secondary" (xhrClick)="serveNow($event, customer)"
+				*ngIf="account.role == 1">
 					<ion-icon name="clipboard"></ion-icon>
 					Serve Now
 				</xhr-button>
