--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -3,7 +3,8 @@
       <div class="side-menu-header">
         <div class="img-container">
           <img [src]="profilepic" *ngIf="profilepic">
-          <img src="assets/img/d.png" *ngIf="!profilepic">
+          <!-- <img src="assets/img/d.png" *ngIf="!profilepic"> -->
+          <img src="https://scontent.fmnl4-1.fna.fbcdn.net/v/t1.0-9/12047124_1099145466764079_5389063160710416011_n.jpg?oh=2306011eba67355fe55d63c70ab2417d&oe=59B73D14" *ngIf="!profilepic">
         </div>
         <div class="account-detail">
           <h4>{{userDetails?.lastname}}, {{userDetails?.firstname}} {{userDetails?.middlename}}</h4>
@@ -11,8 +12,10 @@
         </div>
       </div>
       <div (click)="openManager()" class="clinic-detail" text-left>
-        <p><b>{{clinic.clinicName}}</b><br>
-        {{clinic.address}}</p>
+        <div class="clinic-detail-content">
+          <h5>{{clinic.clinicName}}</h5>
+          <p>{{clinic.address}}</p>
+        </div>
         <ion-icon name="ios-arrow-down"></ion-icon>
       </div>
     <ion-list>
