added draft gui for schedule history

--- a/src/pages/schedule/schedule.html
+++ b/src/pages/schedule/schedule.html
@@ -6,6 +6,11 @@
 		<ion-title>
 			Schedule
 		</ion-title>
+		<ion-buttons end>
+			<button ion-button clear icon-only (click)="goToSchedule()">
+				<ion-icon name="calendar" color="accent"></ion-icon>
+			</button>
+		</ion-buttons>
 	</ion-navbar>
 </ion-header>
 <ion-content >
