--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -3,8 +3,8 @@
       <div class="side-menu-header">
         <div class="img-container">
           <img [src]="profilepic" *ngIf="profilepic">
-          <!-- <img src="assets/img/d.png" *ngIf="!profilepic"> -->
-          <img src="https://scontent.fmnl4-1.fna.fbcdn.net/v/t1.0-9/12047124_1099145466764079_5389063160710416011_n.jpg?oh=2306011eba67355fe55d63c70ab2417d&oe=59B73D14" *ngIf="!profilepic">
+          <img src="assets/img/d.png" *ngIf="!profilepic">
+          <!-- <img src="https://scontent.fmnl4-1.fna.fbcdn.net/v/t1.0-9/12047124_1099145466764079_5389063160710416011_n.jpg?oh=2306011eba67355fe55d63c70ab2417d&oe=59B73D14" *ngIf="!profilepic"> -->
         </div>
         <div class="account-detail">
           <h4>{{userDetails?.lastname}}, {{userDetails?.firstname}} {{userDetails?.middlename}}</h4>
