added arrows on schedule-history for easy next; added additional choice on side menu

--- a/src/pages/schedule-history/schedule-history.html
+++ b/src/pages/schedule-history/schedule-history.html
@@ -7,8 +7,10 @@
 </ion-header>
 <ion-content>
 	<div class="sub-header" text-center>
+		<button ion-button clear icon-only><ion-icon name="arrow-back"></ion-icon></button>
 		<ion-datetime displayFormat="MMMM DD YYYY">
 		</ion-datetime>
+		<button ion-button clear icon-only><ion-icon name="arrow-forward"></ion-icon></button>
 	</div>
 	<ion-list>
 		<ion-card>
