--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,34 +1,43 @@
 <ion-menu [content]="sideMenu">
+  <ion-header>
+    <div class="side-menu-header">
+      <div class="img-container">
+        <img [src]="profilepic" *ngIf="profilepic">
+        <img src="assets/img/d.png" *ngIf="!profilepic">
+        <!-- <img src="https://scontent.fmnl4-1.fna.fbcdn.net/v/t1.0-9/12047124_1099145466764079_5389063160710416011_n.jpg?oh=2306011eba67355fe55d63c70ab2417d&oe=59B73D14" *ngIf="!profilepic"> -->
+      </div>
+      <div class="account-detail">
+        <h4>{{userDetails?.lastname}}, {{userDetails?.firstname}} {{userDetails?.middlename}}</h4>
+        <p>@{{account?.username}}</p>
+      </div>
+    </div>
+    <div (click)="openManager()" class="clinic-detail" text-left>
+      <div class="clinic-detail-content">
+        <h5>{{clinic.clinicName}}</h5>
+        <p>{{clinic.address}}</p>
+      </div>
+      <ion-icon name="ios-arrow-down"></ion-icon>
+    </div>
+  </ion-header>
   <ion-content>
-      <div class="side-menu-header">
-        <div class="img-container">
-          <img [src]="profilepic" *ngIf="profilepic">
-          <img src="assets/img/d.png" *ngIf="!profilepic">
-          <!-- <img src="https://scontent.fmnl4-1.fna.fbcdn.net/v/t1.0-9/12047124_1099145466764079_5389063160710416011_n.jpg?oh=2306011eba67355fe55d63c70ab2417d&oe=59B73D14" *ngIf="!profilepic"> -->
-        </div>
-        <div class="account-detail">
-          <h4>{{userDetails?.lastname}}, {{userDetails?.firstname}} {{userDetails?.middlename}}</h4>
-          <p>@{{account?.username}}</p>
-        </div>
-      </div>
-      <div (click)="openManager()" class="clinic-detail" text-left>
-        <div class="clinic-detail-content">
-          <h5>{{clinic.clinicName}}</h5>
-          <p>{{clinic.address}}</p>
-        </div>
-        <ion-icon name="ios-arrow-down"></ion-icon>
-      </div>
     <ion-list>
       <ion-item-group>
+        <ion-item-divider color="secondary"></ion-item-divider>
         <button ion-item (click)="openProfile()">
           <ion-icon name="contact"></ion-icon>
           Edit Account
+        </button>
+        <button ion-item (click)="openProfile()">
+          <ion-icon name="lock"></ion-icon>
+          Change Password
         </button>
         <button ion-item (click)="openClinicManager()">
           <ion-icon name="folder-open"></ion-icon>
           Manage Clinics 
         </button>
       </ion-item-group>
+      <ion-item-group>
+        <ion-item-divider color="secondary"></ion-item-divider>
         <button ion-item (click)="openManager()">
           <ion-icon name="cog"></ion-icon>
           Settings
@@ -37,6 +46,7 @@
         <ion-icon name="exit"></ion-icon>
           Log-out
         </button>
+      </ion-item-group>
     </ion-list>
   </ion-content>
 </ion-menu>
