fixed access role behavior

--- a/src/pages/clinic-manager/clinic-manager.html
+++ b/src/pages/clinic-manager/clinic-manager.html
@@ -6,7 +6,7 @@
     </ion-navbar>
 </ion-header>
 <ion-content #Content padding>
-    <div *ngIf="accessRole === 0">
+    <div *ngIf="!this.isManager || accessRole === 0">
         <h2> Remaining Clinic(s): {{ allowableClinics - clinics.length}}</h2>
         <hr/>
     </div>
