fixed delete clinic behavior

--- a/src/pages/clinic-manager/clinic-manager.html
+++ b/src/pages/clinic-manager/clinic-manager.html
@@ -38,7 +38,7 @@
                         <ion-row class="actions-container">
                             <ion-col col-12 col-sm-12 col-md-12>
                                 <a *ngIf="!isManager || clinic.accessRole !== 2" (click)="editClinic(clinic, i)" color="accent-dark">Edit&nbsp;&nbsp;&nbsp;</a>
-                                <a *ngIf="clinics.length > 1 && (!isManager || clinic.accessRole === 0)" (click)="deleteClinic(clinic, i)" color="accent-dark">Delete&nbsp;&nbsp;&nbsp;</a>
+                                <a *ngIf="ownedClinics.length > 1 && (!isManager || clinic.accessRole === 0)" (click)="deleteClinic(clinic, i)" color="accent-dark">Delete&nbsp;&nbsp;&nbsp;</a>
                                 <a (click)="associateMember(clinic)" color="accent-dark">Associated Member</a>
                             </ion-col>
                         </ion-row>
@@ -53,6 +53,6 @@
         </ion-label>
     </div>
     <ion-fab bottom right *ngIf="!isManager || accessRole === 0">
-        <button ion-fab color="accent" [disabled]="ownedClinics.length === allowableClinics" (click)="addClinic()"><ion-icon name="add"></ion-icon></button>
+        <button ion-fab color="accent" (click)="addClinic()"><ion-icon name="add"></ion-icon></button>
     </ion-fab>
 </ion-content>
