--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -13,8 +13,8 @@
     </div>
     <div (click)="openManager()" class="clinic-detail" text-left>
       <div class="clinic-detail-content">
-        <h5>{{clinic.clinicName}}</h5>
-        <p>{{clinic.address}}</p>
+        <h5>{{clinic?.clinicName}}</h5>
+        <p>{{clinic?.address}}</p>
       </div>
       <ion-icon name="ios-arrow-down"></ion-icon>
     </div>
