implemented change password

--- a/src/pages/change-password/change-password.html
+++ b/src/pages/change-password/change-password.html
@@ -5,6 +5,6 @@
 		</ion-title>
 	</ion-navbar>
 </ion-header>
-<ion-content>
-	<change-password-form></change-password-form>
+<ion-content #Content padding>
+	<change-password-form (onSubmit)="changePassword($event)"></change-password-form>
 </ion-content>
