--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -27,7 +27,7 @@
           <ion-icon name="contact"></ion-icon>
           Edit Account
         </button>
-        <button ion-item (click)="openProfile()">
+        <button ion-item (click)="openChangePassword()">
           <ion-icon name="lock"></ion-icon>
           Change Password
         </button>
