--- a/src/pages/consultation-form/consultation-form.html
+++ b/src/pages/consultation-form/consultation-form.html
@@ -1,45 +1,43 @@
-<!--
-  Generated template for the ConsultationForm page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar color="primary">
     <ion-title>Consultation Form</ion-title>
   </ion-navbar>
-
 </ion-header>
-
-
 <ion-content padding>
-<ion-label>Visit Reason</ion-label>
-<ion-item round>
-	<ion-input round></ion-input>
-</ion-item>
-<ion-label>Symptoms</ion-label>
-<ion-item round>
-<ion-textarea></ion-textarea>
-</ion-item>
-<ion-label>Diagnosis</ion-label>
-<ion-item round>
-<ion-textarea></ion-textarea>
-</ion-item>
-<ion-label>Remarks</ion-label>
-<ion-item round>
-<ion-textarea></ion-textarea>
-</ion-item>
-<hr>
-<ion-label>Attachment</ion-label>
-<div text-center>
-<div frame *ngFor="let img of images" >
-	<img [src]="img">
-</div>
-	<button ion-button large color="accent" round (click)="addAttachment()" text-center><ion-icon name="attach"></ion-icon>Attach</button>
-</div>
-<hr>
-<div text-center>
-<button ion-button large color="accent" round>Submit</button>
-</div>
+  <ion-label>Date of Visit</ion-label>
+  <!-- defaulted to date of schedule -->
+  <ion-item round>
+    <ion-input round></ion-input>
+  </ion-item>
+  <ion-label>Concern</ion-label>
+  <ion-item round>
+    <ion-input round></ion-input>
+  </ion-item>
+
+  <!-- insert dynamic form here -->
+
+  <ion-label>Impression/Diagnosis</ion-label>
+  <ion-item round>
+    <ion-textarea></ion-textarea>
+  </ion-item>
+  <ion-label>Plan</ion-label>
+  <ion-item round>
+    <ion-textarea></ion-textarea>
+  </ion-item>
+  <ion-label>Follow Up On:</ion-label>
+  <ion-item round>
+    <ion-input round></ion-input>
+  </ion-item>
+  <hr>
+  <ion-label>Attachment</ion-label>
+  <div text-center>
+    <div frame *ngFor="let img of images">
+      <img [src]="img">
+    </div>
+    <button ion-button large color="accent" round (click)="addAttachment()" text-center><ion-icon name="attach"></ion-icon>Attach</button>
+  </div>
+  <hr>
+  <div text-center>
+    <button ion-button large color="accent" round>Submit</button>
+  </div>
 </ion-content>
