--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -9,32 +9,29 @@
 	</ion-navbar>
 </ion-header>
 <ion-content>
-	<ion-grid>
-		<ion-row >
-			<ion-col offset-10 width-90>
-				<ion-card class="chat-me">
-					<ion-card-header>
-						Me
-					</ion-card-header>
-					<ion-card-content>
-						Let them in
-					</ion-card-content>
-				</ion-card>
-			</ion-col>
-		</ion-row>
-		<ion-row>
-			<ion-col width-90>
-				<ion-card class="chat-other">
-					<ion-card-header>
-						Assistant2
-					</ion-card-header>
-					<ion-card-content>
-						Ok doc!!!
-					</ion-card-content>
-				</ion-card>
-			</ion-col>
-		</ion-row>
-	</ion-grid>
+	<div class="chat-message">
+		<ion-card class="chat-me">
+			<ion-item>
+			    <h2>Me</h2>
+			    <p>time</p>
+			</ion-item>
+			<ion-card-content>
+				Let them in
+			</ion-card-content>
+		</ion-card>
+		<ion-card class="chat-other">
+			<ion-item>
+				<ion-avatar item-left>
+			      <img src="assets/img/d.png">
+			    </ion-avatar>
+			    <h2>Assistant2</h2>
+			    <p>time</p>
+			</ion-item>
+			<ion-card-content>
+				Ok doc!!!
+			</ion-card-content>
+		</ion-card>
+	</div>
 </ion-content>
 <ion-footer>
 	<ion-toolbar color="secondary">
