push notification redesign for easier subscription of certain types; Incomplete sending of notification

--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -51,7 +51,7 @@
   </ion-content>
 </ion-menu>
 <ion-tabs #sideMenu>
-  <ion-tab [root]="notification" tabTitle="Notifications" tabIcon="notifications"></ion-tab>
+  <ion-tab [root]="notification" tabTitle="Dashboard" tabIcon="stats"></ion-tab>
   <ion-tab [root]="schedule" tabTitle="Schedule" tabIcon="time" color="accent-dark"></ion-tab>
   <ion-tab [root]="patient" tabTitle="Patient" tabIcon="body" color="accent-dark"></ion-tab>
   <ion-tab [root]="chat" tabTitle="Chat" tabIcon="chatbubbles" color="accent-dark"></ion-tab>
