initial pd relationship page

--- a/src/pages/patient-profile/patient-profile.html
+++ b/src/pages/patient-profile/patient-profile.html
@@ -33,7 +33,7 @@
 			</button>
 		</ion-col>
 		<ion-col width-33 color="primary">
-			<button ion-button icon-only clear full>
+			<button ion-button icon-only clear full (click)="share()">
 				<ion-icon name="link" color="accent"></ion-icon>
 				Share
 			</button>
