--- a/src/pages/patient-doctor-relationship/patient-doctor-relationship.html
+++ b/src/pages/patient-doctor-relationship/patient-doctor-relationship.html
@@ -9,22 +9,22 @@
     <form [formGroup]="pdForm" #form="ngForm" (ngSubmit)="xhr.submit($event)">
         <ion-grid>
             <ion-row>
-                <ion-col col-4 col-sm-4 col-md-4>
+                <ion-col col-12 col-sm-6 col-md-6>
                     <ion-label class="form-label">Doctor *</ion-label>
-                    <ion-item round>
-                        <ion-input name="doctorId" formControlName="doctorId"></ion-input>
+                    <ion-item round (click)="searchUser()">
+                        <ion-input name="doctorName" formControlName="doctorName"></ion-input>
                     </ion-item>
                     <div class="error-message" *ngIf="pdForm.get('doctorId')?.dirty &&  pdForm.get('doctorId').invalid">
                         {{ errors.doctorId }}
                     </div>
                 </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col col-4 col-sm-4 col-md-4>
+                <ion-col col-12 col-sm-6 col-md-4>
                     <ion-label class="form-label">Relationship Type *</ion-label>
                     <ion-item clean>
                         <ion-select class="options" name="relationship" formControlName="relationship">
-                            <ion-option *ngFor="let relationship of relationships; let i = index" [value]="i">{{ relationship }}</ion-option>
+                            <div *ngFor="let relationship of relationships; let i = index">
+                                <ion-option *ngIf="allowableRelationships.includes(i)" [value]="i">{{ relationship }}</ion-option>
+                            </div>
                         </ion-select>
                     </ion-item>
                     <div class="error-message" *ngIf="pdForm.get('relationship').dirty &&  pdForm.get('relationship').invalid">
@@ -33,20 +33,17 @@
                 </ion-col>
             </ion-row>
             <ion-row>
-                <ion-col col-4 col-sm-4 col-md-4>
-                    <ion-col col-6 col-sm-6 col-md-6>
-                        <ion-label class="form-label">Expiry Date</ion-label>
-                        <ion-item clean>
-                            <ion-datetime name="expiry" formControlName="expiry" [min]="getMinDate()">
-                            </ion-datetime>
-                        </ion-item>
-                    </ion-col>
+                <ion-col col-12 col-sm-6 col-md-3>
+                    <ion-label class="form-label">Expiry Date</ion-label>
+                    <ion-item clean>
+                        <ion-datetime name="expiry" formControlName="expiry" [min]="getMinDate()">
+                        </ion-datetime>
+                    </ion-item>
                 </ion-col>
             </ion-row>
         </ion-grid>
         <div text-center>
-            <xhr-button #xhr round large color="accent" type="submit" [disabled]="mode !== 'Edit' && (clinicForm.pristine || form.pristine)"
-                (xhrClick)="submitForm($event)">
+            <xhr-button #xhr round large color="accent" type="submit" [disabled]="pdForm.pristine || form.pristine" (xhrClick)="submitForm($event)">
                 Submit
             </xhr-button>
         </div>
