initial implem of patient manager

--- a/src/pages/patient-relationship/patient-relationship.html
+++ b/src/pages/patient-relationship/patient-relationship.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-navbar color="secondary">
         <ion-title>
-            {{ pageHeader }}
+            Share Patient
         </ion-title>
     </ion-navbar>
 </ion-header>
