--- a/src/pages/clinic-manager/clinic-manager.html
+++ b/src/pages/clinic-manager/clinic-manager.html
@@ -6,53 +6,55 @@
     </ion-navbar>
 </ion-header>
 <ion-content #Content padding>
-    <div *ngIf="!this.isManager || accessRole === 0">
-        <h2> Remaining Clinic(s): {{ allowableClinics - ownedClinics.length}}</h2>
-        <hr/>
-    </div>
-    <div class="clinic-container">
-        <ion-card *ngFor="let clinic of clinics;let i=index">
-            <ion-card-content>
-                <accordion [header]="clinic?.clinicName" [subHeader]="clinic?.address" [numbering]="i+1">
-                    <ion-grid>
-                        <ion-row>
-                            <ion-col col-4 col-sm-2 col-md-2>
-                                <b>Schedule:</b>
-                            </ion-col>
-                            <ion-col col-8 col-sm-10 col-md-10>
-                                <ul>
-                                    <li *ngFor="let schedule of clinic?.schedules">{{ days[schedule?.dayOfWeek] }} : {{ displayTime(schedule?.timeSlot) }}</li>
-                                </ul>
-                            </ion-col>
-                        </ion-row>
-                        <ion-row>
-                            <ion-col col-4 col-sm-2 col-md-2>
-                                <b>Contact Us:</b>
-                            </ion-col>
-                            <ion-col col-8 col-sm-10 col-md-10>
-                                <ul>
-                                    <li *ngFor="let contact of clinic?.contacts">{{ contactType[contact?.contactType] }} : {{ contact?.contact }}</li>
-                                </ul>
-                            </ion-col>
-                        </ion-row>
-                        <ion-row class="actions-container">
-                            <ion-col col-12 col-sm-12 col-md-12>
-                                <a *ngIf="!isManager || clinic.accessRole !== 2" (click)="editClinic(clinic, i)" color="accent-dark">Edit&nbsp;&nbsp;&nbsp;</a>
-                                <a *ngIf="ownedClinics.length > 1 && (!isManager || clinic.accessRole === 0)" (click)="deleteClinic(clinic, i)" color="accent-dark">Delete&nbsp;&nbsp;&nbsp;</a>
-                                <a (click)="associateMember(clinic)" color="accent-dark">Associated Member</a>
-                            </ion-col>
-                        </ion-row>
-                    </ion-grid>
-                </accordion>
-            </ion-card-content>
-        </ion-card>
-    </div>
-    <div class="speil" *ngIf="clinics?.length === 0" text-center>
-        <ion-label>
-            Create Clinic by pressing the add button on the lower left of the screen.
-        </ion-label>
-    </div>
-    <ion-fab bottom right *ngIf="!isManager || accessRole === 0">
-        <button ion-fab color="accent" [disabled]="ownedClinics.length === allowableClinics" (click)="addClinic()"><ion-icon name="add"></ion-icon></button>
-    </ion-fab>
+    <content-with-loading [isLoading]="isLoading | async">
+        <div *ngIf="!this.isManager || accessRole === 0">
+            <h2> Remaining Clinic(s): {{ allowableClinics - ownedClinics.length}}</h2>
+            <hr/>
+        </div>
+        <div class="clinic-container">
+            <ion-card *ngFor="let clinic of clinics;let i=index">
+                <ion-card-content>
+                    <accordion [header]="clinic?.clinicName" [subHeader]="clinic?.address" [numbering]="i+1">
+                        <ion-grid>
+                            <ion-row>
+                                <ion-col col-4 col-sm-2 col-md-2>
+                                    <b>Schedule:</b>
+                                </ion-col>
+                                <ion-col col-8 col-sm-10 col-md-10>
+                                    <ul>
+                                        <li *ngFor="let schedule of clinic?.schedules">{{ days[schedule?.dayOfWeek] }} : {{ displayTime(schedule?.timeSlot) }}</li>
+                                    </ul>
+                                </ion-col>
+                            </ion-row>
+                            <ion-row>
+                                <ion-col col-4 col-sm-2 col-md-2>
+                                    <b>Contact Us:</b>
+                                </ion-col>
+                                <ion-col col-8 col-sm-10 col-md-10>
+                                    <ul>
+                                        <li *ngFor="let contact of clinic?.contacts">{{ contactType[contact?.contactType] }} : {{ contact?.contact }}</li>
+                                    </ul>
+                                </ion-col>
+                            </ion-row>
+                            <ion-row class="actions-container">
+                                <ion-col col-12 col-sm-12 col-md-12>
+                                    <a *ngIf="!isManager || clinic.accessRole !== 2" (click)="editClinic(clinic, i)" color="accent-dark">Edit&nbsp;&nbsp;&nbsp;</a>
+                                    <a *ngIf="ownedClinics.length > 1 && (!isManager || clinic.accessRole === 0)" (click)="deleteClinic(clinic, i)" color="accent-dark">Delete&nbsp;&nbsp;&nbsp;</a>
+                                    <a (click)="associateMember(clinic)" color="accent-dark">Associated Member</a>
+                                </ion-col>
+                            </ion-row>
+                        </ion-grid>
+                    </accordion>
+                </ion-card-content>
+            </ion-card>
+        </div>
+        <div class="speil" *ngIf="clinics?.length === 0" text-center>
+            <ion-label>
+                Create Clinic by pressing the add button on the lower left of the screen.
+            </ion-label>
+        </div>
+        <ion-fab bottom right *ngIf="!isManager || accessRole === 0">
+            <button ion-fab color="accent" [disabled]="ownedClinics.length === allowableClinics" (click)="addClinic()"><ion-icon name="add"></ion-icon></button>
+        </ion-fab>
+    </content-with-loading>
 </ion-content>
