--- a/src/pages/patient-profile/patient-profile.html
+++ b/src/pages/patient-profile/patient-profile.html
@@ -9,7 +9,7 @@
 				<ion-icon name="md-create" color="accent"></ion-icon>
 			</button>
 			<button ion-button icon-only clear full (click)="share()">
-				<ion-icon name="link" color="accent"></ion-icon>
+				<ion-icon name="ios-contacts" color="accent"></ion-icon>
 			</button>
 		</ion-buttons>
 	</ion-navbar>
