--- a/src/pages/patient-relationship/patient-relationship.html
+++ b/src/pages/patient-relationship/patient-relationship.html
@@ -1,33 +1,31 @@
 <ion-header>
     <ion-navbar color="secondary">
         <ion-title>
-            Share Patient
+            {{ pageHeader }}
         </ion-title>
     </ion-navbar>
 </ion-header>
 <ion-content #Content padding>
-    <form [formGroup]="pdForm" #form="ngForm" (ngSubmit)="xhr.submit($event)">
+    <form [formGroup]="pRelForm" #form="ngForm" (ngSubmit)="xhr.submit($event)">
         <ion-grid>
             <ion-row>
                 <ion-col col-12 col-sm-6 col-md-6>
                     <ion-label class="form-label">Doctor *</ion-label>
-                    <ion-item round (click)="searchUser()">
-                        <ion-input name="doctorName" formControlName="doctorName"></ion-input>
+                    <ion-item round>
+                        <ion-input name="doctorName" formControlName="doctorName" (click)="searchUser()"></ion-input>
                     </ion-item>
-                    <div class="error-message" *ngIf="pdForm.get('doctorId')?.dirty &&  pdForm.get('doctorId').invalid">
+                    <div class="error-message" *ngIf="pRelForm.get('doctorId')?.dirty &&  pRelForm.get('doctorId').invalid">
                         {{ errors.doctorId }}
                     </div>
                 </ion-col>
                 <ion-col col-12 col-sm-6 col-md-4>
                     <ion-label class="form-label">Relationship Type *</ion-label>
                     <ion-item clean>
-                        <ion-select class="options" name="relationship" formControlName="relationship">
-                            <div *ngFor="let relationship of relationships; let i = index">
-                                <ion-option *ngIf="allowableRelationships.includes(i)" [value]="i">{{ relationship }}</ion-option>
-                            </div>
+                        <ion-select class="options" name="relationship" formControlName="relationship" [disabled]="true">
+                            <ion-option *ngFor="let relationship of relationships; let i = index" [value]="i">{{ relationship }}</ion-option>
                         </ion-select>
                     </ion-item>
-                    <div class="error-message" *ngIf="pdForm.get('relationship').dirty &&  pdForm.get('relationship').invalid">
+                    <div class="error-message" *ngIf="pRelForm.get('relationship').dirty &&  pRelForm.get('relationship').invalid">
                         {{ errors.relationship }}
                     </div>
                 </ion-col>
@@ -43,7 +41,7 @@
             </ion-row>
         </ion-grid>
         <div text-center>
-            <xhr-button #xhr round large color="accent" type="submit" [disabled]="pdForm.pristine || form.pristine" (xhrClick)="submitForm($event)">
+            <xhr-button #xhr round large color="accent" type="submit" [disabled]="pRelForm.pristine || form.pristine" (xhrClick)="submitForm($event)">
                 Submit
             </xhr-button>
         </div>
