refactored forms. screens for patient manager

--- a/src/pages/patient-manager/transferred/transferred.html
+++ b/src/pages/patient-manager/transferred/transferred.html
@@ -7,7 +7,7 @@
             </ion-label>
         </div>
         <ion-fab bottom right>
-            <button ion-fab color="accent" (click)="transferPatient()"><ion-icon name="add"></ion-icon></button>
+            <button ion-fab color="accent" (click)="transferPatient()" [disabled]="true"><ion-icon name="add"></ion-icon></button>
         </ion-fab>
     </div>
 </ion-content>
