--- a/src/pages/patient-manager/collaborated/collaborated.html
+++ b/src/pages/patient-manager/collaborated/collaborated.html
@@ -8,7 +8,7 @@
             </ion-label>
         </div>
         <ion-fab bottom right>
-            <button ion-fab color="accent" (click)="collaboratePatient()"><ion-icon name="add"></ion-icon></button>
+            <button ion-fab color="accent" (click)="collaboratePatient()" [disabled]="true"><ion-icon name="add"></ion-icon></button>
         </ion-fab>
     </div>
 </ion-content>
