--- a/src/pages/patient-relationship/patient-relationship.html
+++ b/src/pages/patient-relationship/patient-relationship.html
@@ -11,11 +11,11 @@
             <ion-row>
                 <ion-col col-12 col-sm-6 col-md-6>
                     <ion-label class="form-label">Doctor *</ion-label>
-                    <ion-item round>
-                        <ion-input name="doctorName" formControlName="doctorName" (click)="searchUser()"></ion-input>
+                    <ion-item round (click)="searchUser()">
+                        <ion-input name="doctorName" formControlName="doctorName"></ion-input>
                     </ion-item>
                     <div class="error-message" *ngIf="doctorName.dirty &&  doctorName.invalid">
-                        {{ errors.doctorId }}
+                        {{ errors.doctorName }}
                     </div>
                 </ion-col>
                 <ion-col col-12 col-sm-6 col-md-4>
