partial root patient information

--- a/src/pages/patient/patient.html
+++ b/src/pages/patient/patient.html
@@ -16,6 +16,6 @@
 		</button>
 	</ion-list>
 	<ion-fab bottom right>
-		<button ion-fab color="accent"><ion-icon name="add"></ion-icon></button>
+		<button ion-fab color="accent"><ion-icon name="add" (click)="goToAdd()"></ion-icon></button>
 	</ion-fab>
 </ion-content>
