--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -13,7 +13,7 @@
 		<ion-card class="chat-me" *ngSwitchCase="'Me'">
 			<ion-item>
 			    <h2>Me</h2>
-			    <p>{{message.date}}</p>
+			    <p>{{message.timestamp}}</p>
 			</ion-item>
 			<ion-card-content>
 				{{message.message}}
