changed submit button labels to done

--- a/src/pages/clinic-manager/clinic/clinic.html
+++ b/src/pages/clinic-manager/clinic/clinic.html
@@ -115,7 +115,7 @@
         <div text-center>
             <xhr-button #xhr round large color="accent" type="submit" [disabled]="mode !== 'Edit' && (clinicForm.pristine || form.pristine)"
                 (xhrClick)="submitForm($event)">
-                Submit
+                Done
             </xhr-button>
         </div>
     </form>
