--- a/src/pages/consultation-form/consultation-form.html
+++ b/src/pages/consultation-form/consultation-form.html
@@ -38,6 +38,6 @@
   </div>
   <hr>
   <div text-center>
-    <button ion-button large color="accent" round>Submit</button>
+    <button ion-button large color="accent" round>Done</button>
   </div>
 </ion-content>
