--- a/src/pages/patient-relationship/patient-relationship.html
+++ b/src/pages/patient-relationship/patient-relationship.html
@@ -45,7 +45,7 @@
         </ion-grid>
         <div text-center>
             <xhr-button #xhr round large color="accent" type="submit" [disabled]="pRelForm.pristine || form.pristine" (xhrClick)="submitForm($event)">
-                Submit
+                Done
             </xhr-button>
         </div>
     </form>
