--- a/src/pages/clinic-manager/clinic/clinic.html
+++ b/src/pages/clinic-manager/clinic/clinic.html
@@ -10,7 +10,7 @@
         <ion-grid>
             <ion-row>
                 <ion-col col-12 col-sm-12 col-md-4>
-                    <ion-label class="form-label">Clinic Name *</ion-label>
+                    <ion-label class="form-label">Clinic Name* :</ion-label>
                     <ion-item round>
                         <ion-input name="clinicName" formControlName="clinicName"></ion-input>
                     </ion-item>
@@ -21,7 +21,7 @@
             </ion-row>
             <ion-row>
                 <ion-col>
-                    <ion-label class="form-label">Address *</ion-label>
+                    <ion-label class="form-label">Address* :</ion-label>
                     <ion-item round>
                         <ion-textarea name="address" formControlName="address"></ion-textarea>
                     </ion-item>
@@ -33,7 +33,7 @@
 
             <ion-row>
                 <ion-col col-6 col-sm-6 col-md-6>
-                    <ion-label class="form-label">Schedule *</ion-label>
+                    <ion-label class="form-label">Schedule* :</ion-label>
                 </ion-col>
                 <ion-col col-6 col-sm-6 col-md-6>
                     <ion-label class="form-label" color="accent-dark" (click)="createSchedule($event)">
@@ -75,7 +75,7 @@
 
             <ion-row>
                 <ion-col col-6 col-sm-6 col-md-6>
-                    <ion-label class="form-label">Contacts *</ion-label>
+                    <ion-label class="form-label">Contacts* :</ion-label>
                 </ion-col>
                 <ion-col col-6 col-sm-6 col-md-6>
                     <ion-label class="form-label" color="accent-dark" (click)="addContact($event)">
